[workspace]

[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
autoexamples = true
autotests = true
description = "Yet another web server framework for rust"
edition = "2018"
keywords = ["rweb", "server", "http", "hyper"]
license = "Apache-2.0"
name = "rweb"
repository = "https://github.com/kdy1/rweb.git"
version = "0.10.0"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["multipart", "websocket"]
multipart = ["warp/multipart"]
openapi = ["rweb-macros/openapi", "rweb-openapi"]
tls = ["warp/tls"]
websocket = ["warp/websocket"]

[dependencies]
futures = "0.3"
http = "0.2"
indexmap = "1"
rweb-macros = {version = "0.9.0", path = "./macros"}
rweb-openapi = {version = "0.6.0", optional = true}
scoped-tls = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tokio = {version = "1.2", features = ["macros", "rt-multi-thread"]}
tokio-stream = "0.1"
warp = "0.3.0"

[dev-dependencies]
bytes = "1.0"
http = "0.2"
hyper = "0.14"
log = "0.4"
pretty_env_logger = "0.4"
serde_yaml = "0.8"

[[example]]
name = "openapi"
required-features = ["openapi"]

[[example]]
name = "todo_websockets"
required-features = ["websocket"]
