[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Yet another web server framework for rust"
edition = "2018"
license = "Apache-2.0"
name = "rweb-macros"
repository = "https://github.com/kdy1/rweb.git"
version = "0.6.0"

[lib]
proc-macro = true

[features]
openapi = []

[dependencies]
pmutil = "0.5.3"
proc-macro2 = "1"
quote = "1"
rweb-openapi = "0.5.0"
syn = {version = "1", features = ["full", "visit"]}
