[package]
name = "rweb-service"
version = "0.1.0"
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/kdy1/rweb.git"
description = "Service trait for rweb"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.1"
pin-project = "0.4.6"


[dev-dependencies]
tokio = { version = "0.2.3", features = ["macros"] }